# approportionment

./: .gitignore  216.js  347.bundle.js  426.bundle.js  827.bundle.js  ARCHITECTURE.md  Cargo.toml  README.md  README.txt  apply_patches.py  bundle.js  clippy.toml  config.dhall  default_simulation_result.json  example_links_generator.dhall  get_num.py  index.html  index.js  main.py  performance-findings.md  requirements.txt  resources.md  rust-toolchain.toml.sample  schema.dhall  simple.css  styles.css
.github/workflows/: benchmark.yaml  site.yaml
benches/: README.md  analysis.py  benchmarks.rs  iai.py  iai_benches.rs  parse_iai.py  parties.rs  plot_iai.py  rank_methods.rs  requirements.txt  seed.rs
benches/criterion_benches/: cardinal.rs  mod.rs  party_list.rs  simple.rs  stv.rs
benches/iai_bench/: cardinal.rs  mod.rs  party_list.rs  simple.rs  stv.rs
config/: README.md  benchmark.dhall  config.dhall  parties.dhall  schema.dhall  stv-profiling.dhall  stv.dhall  utils.dhall
config/example_utils/: README.md  modifier.dhall  parties.dhall  stv_parties.dhall  utils.dhall
config/lib/: README.md  parties.dhall  schema.dhall  utils.dhall
data/: langs.py  mal.py  postprocess.py  rounds.py  stack_overflow.py
examples/: equilateral.json  two_close.json
langs/: Phragmen.json  Phragmen_metrics.json  SPAV.json  SPAV_metrics.json  index.html  index.js
langs_matrix/: index.html  index.js
langs_pairwise/: Phragmen-a.json  index.html  index.js
myanimelist/: RRV.json  StarPr.json  index.html  index.js
parallelism-analysis/: README.md  main.py
parallelism-analysis/data/: 100-False-0000.json  100-False-0001.json  100-False-0010.json  100-False-0011.json  100-False-0100.json  100-False-0101.json  100-False-0110.json  100-False-0111.json  100-False-1000.json  100-False-1001.json  100-False-1010.json  100-False-1011.json  100-False-1100.json  100-False-1101.json  100-False-1110.json  100-False-1111.json  100-True-0000.json  100-True-0001.json  100-True-0010.json  100-True-0011.json  100-True-0100.json  100-True-0101.json  100-True-0110.json  100-True-0111.json  100-True-1000.json  100-True-1001.json  100-True-1010.json  100-True-1011.json  100-True-1100.json  100-True-1101.json  100-True-1110.json  100-True-1111.json  1000-False-0000.json  1000-False-0001.json  1000-False-0010.json  1000-False-0011.json  1000-False-0100.json  1000-False-0101.json  1000-False-0110.json  1000-False-0111.json  (+44 more)
proptest-regressions/: utils.txt
proptest-regressions/stv/tests/: regression.txt
python/: .mypy.ini  README.md  colorschemes.py  main.py  requirements.txt  stv.py
rust/: README.md  allocate.rs  arrow.rs  coalitions.rs  config.rs  distance.rs  extract_parties.rs  generators.rs  lib.rs  main.rs  methods.rs  rng.rs  simulator.rs  test_config.rs  test_utils.rs  tie.rs  types.rs  utils.rs  wasm.rs
rust/cardinal/: allocate.rs  common.rs  generate.rs  lib.rs  mod.rs  phragmen.rs  reweighter.rs  spav.rs  sss.rs  star_pr.rs  strategy.rs  thiele.rs
rust/cardinal/strategy/: tests.rs
rust/cardinal/tests/: generate.rs  mod.rs  phragmen.rs  rrv.rs  spav.rs  star_pr.rs
rust/highest_averages/: allocate.rs  dhondt.rs  divisor.rs  lib.rs  mod.rs  webster.rs
rust/largest_remainder/: allocate.rs  droop.rs  hare.rs  lib.rs  mod.rs  quota.rs
rust/proptest-regressions/: dhondt.txt  droop.txt  hare.txt  webster.txt
rust/random_ballot/: mod.rs
rust/stv/: 1.patch  2.patch  3.patch  4.patch  australia.rs  bitarray.rs  core.rs  generate_ballots.rs  lib.rs  mod.rs  party_discipline.rs  restore.patch  sort_cands.rs  tests.rs  transfer.rs  types.rs  utils.rs
rust/stv/tests/: bitarray.rs  common_unit.rs  mod.rs  no_crash.rs  party_discipline.rs  regression.rs  unit.rs
rust/test/: config.rs  methods.rs  mod.rs
rust/wasm/: lib.rs  mod.rs  storage.rs
src/: colors.rs  config.rs  dhondt.rs  highest_averages.rs  main.rs  plot.rs  simulator.rs  test_config.rs  test_utils.rs  types.rs
src/highest_averages/: dhondt.rs  lib.rs  mod.rs  webster.rs
src/largest_remainder/: droop.rs  hare.rs  lib.rs  mod.rs
src/plot/: colors.rs  mod.rs  plot.rs  types.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: constants.ts  index.html  index.ts  party_tables.tsx  pixi.ts  plot.ts  setup.ts  styles.css  types.ts  utils.ts  worker.ts
webui/: .eslintignore  .eslintrc.cjs  README.md  ROADMAP.md  build.sh  build_css.sh  find-unneeded-export.sh  find-unused-functions.sh  package-lock.json  package.json  purgecss.mjs  tsconfig.json  webpack.config.js
webui/css/: alert.css  base.css  body.css  buttons.css  canvas.css  chart.css  colors.css  config.css  constants.scss  icons.css  input.scss  layout.css  layout.scss  matrix.css  media_queries.scss  nav.css  progress.css  styles.css  styles.scss  utilities.css  vars.css
webui/css/chart/: canvas.css  chart.css  floating.css
webui/css/config/: bar_chart.css  base.css  buttons.css  card.css  colorscheme_select.css  config.scss  example.css  form.css  import.css  legend.css  run_button.css  sparkline.css  tables.css
webui/css/rounds/: rounds.css
webui/css/utilities/: cursor.css  layout.css  sizes.css  spacing.css  utilities.css
webui/html/: index.html
webui/html/langs/: index.html
webui/html/langs_matrix/: index.html
webui/static/: README.md  colinear.json  default_simulation_result.json  equilateral.json  middle_four.json  on_triangle.json  run.sh  square.json  stv_square.json  stv_square_4.json  two_close.json
webui/typescript/: bar_chart.ts  boundary.ts  cache.ts  canvas.ts  canvas_plotter.ts  cmaps.ts  coalition_table.ts  color_wheel.ts  colormap.ts  colormap_nd.ts  constants.ts  convert_locations.ts  create_party_table.ts  defaults.ts  dom.ts  drag.ts  form.ts  hsluv.ts  import.ts  index.ts  langs.ts  legend.ts  load_parties.ts  method.ts  myanimelist.ts  party.ts  party_table.ts  party_tables.tsx  pixi.ts  pixi_drag.ts  plot_party.ts  plot_simulation.ts  plot_utils.ts  process_results.ts  progress.ts  random.ts  rounds.ts  setup.ts  setup_coalition_table.ts  setup_form.ts  (+10 more)
webui_examples/: README.md
(+227 files in other folders)
