[package]
name = "approportionment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "approportionment"
path = "rust/main.rs"

[lib]
name = "libapproportionment"
path = "rust/lib.rs"
crate-type = ["cdylib", "lib"]

[profile.release]
# debug = 1  # Turn on for profiling
lto = true
# Doesn't help according to benchmarks
#codegen-units = 1
#panic = "abort"
#strip = true

[features]
default = ["binary"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
wasm_debug = ["wasm", "dep:web-sys"]
binary = ["dep:serde", "dep:serde_dhall", "dep:indicatif", "dep:arrow"]

[dependencies]
# These dependencies are shared by both binary and wasm
# enables wasm-pack support for getrandom (and arrow)
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
statrs = "0.16.0"
rayon = "1.6.0"

# These dependencies are only used for the binary
serde = { version = "1.0.148", features = ["derive"], optional = true }
serde_dhall = { version = "0.12.0", optional = true }
indicatif = { version = "0.17.2", optional = true }
arrow = { version = "28.0.0", optional = true }

# These dependencies are only used for the wasm lib
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
serde-wasm-bindgen = { version = "0.4.5", optional = true }

# This dependency is only used for wasm_debug
web-sys = {version = "0.3", optional = true, features = ["console"]}

[dev-dependencies]
proptest = "1.0.0"
