[package]
name = "approportionment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "approportionment"
path = "rust/bin/main.rs"

[lib]
name = "libapproportionment"
path = "rust/lib.rs"
crate-type = ["cdylib", "lib"]

[profile.release]
# debug = 1  # Turn on for profiling
lto = true
# These are slightly faster on everything except for non-STV methods with
# 10000 voters. Not convincing enough to switch. Binary size is halved though.
#codegen-units = 1
#panic = "abort"
#strip = true

[profile.bench]
lto = true

[features]
default = ["binary"]
binary = ["dep:serde", "dep:serde_dhall", "dep:arrow"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen", "voters_sample"]
wasm_debug = ["wasm", "dep:web-sys"]

# extra features
progress_bar = ["dep:indicatif"]
voters_sample = []

# performance
intrinsics = []
fma_non_stv = []
fma_stv = []

# unit tests
test_real_stv = []

[dependencies]
# These dependencies are shared by both binary and wasm
# enables wasm-pack support for getrandom (and arrow)
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.6.0"
fastrand = "1.8.0"
rand_core = "0.6.4"

# These dependencies are only used for the binary
serde = { version = "1.0.148", features = ["derive"], optional = true }
serde_dhall = { version = "0.12.0", optional = true }
indicatif = { version = "0.17.2", optional = true }
arrow = { version = "28.0.0", optional = true }

# These dependencies are only used for the wasm lib
wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
serde-wasm-bindgen = { version = "0.4.5", optional = true }
# https://github.com/smol-rs/fastrand/issues/27
instant = {version="*", features=["wasm-bindgen"]}

# This dependency is only used for wasm_debug
web-sys = {version = "0.3", optional = true, features = ["console"]}

[dev-dependencies]
criterion = { version = "0.4.0", features = [ "html_reports" ]}
proptest = "1.1.0"
iai = "0.1"
# This is a dependency to itself, just to an older commit.
# The purpose is to enable property based regression testing
approportionment-prev = {git = "https://github.com/akazukin5151/approportionment.git", package="approportionment", rev="0246cf2"}
# TODO: c987aaa fixed a bug, so if regression test fails it can be expected.
# verify that the failure is due to the bug fixed by c987aaa, if it is,
# then change the rev to c987aaa
chrono = "0.4.24"
serde_json = "1.0"
paste = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "iai_benches"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
